psad-2.1.6 (07/09/2010):
    - Bug fix for Decode_Month() calls used to handle date formats and ensure
      proper month handling for iptables log message time stamps.  This bug
      caused psad to die in some cases, and the specific error on the console
      in --debug mode was:
        Date::Calc::Decode_Month(): argument is not a string at \
        /usr/sbin/psad line 1103, <FWDATA> line 2.
    - (Franck Joncourt) Added --Override-config feature so that alternate
      configuration files can be specified on the command line to override
      configuration variables in the standard /etc/psad/psad.conf file.
    - (Franck Joncourt) Submitted patches to fix stderr redirection for the
      usage of the mail binary, and to close stdout, stdin, and stderr when
      running psad as a daemon.

psad-2.1.5 (02/20/2009):
    - (Miroslav Grepl) Contributed policy files to make psad compatible with
      SELinux.  The files are located in a new "selinux" directory in the
      psad sources.
    - Bug fix for local server ports not reported correctly under netstat
      parsing (Franck Joncourt).
    - (Steve B) Submitted patch to fix a bug in the start() function in the
      Gentoo init script which caused psad to not be started and the error
      "* ERROR: psad failed to start" to be generated.
    - Bug fix when ENABLE_SYSLOG_FILE is enabled to run a preliminary regex
      match on each syslog message because kmsgsd is not running and therefore
      has not gone through the kmsgsd tests for a properly structured iptables
      message.
    - Updated IPTables::Parse to 0.7.
    - Updated IPTables::ChainMgr to 0.9.

psad-2.1.4 (08/21/2008):
    - Restructured perl module paths to make it easy to introduce a "nodeps"
      distribution of psad that does not contain any perl modules.  This
      allows better integration with systems that already have all necessary
      modules installed (including the IPTables::ChainMgr and IPTables::Parse