@@ -62,6 +62,13 @@ FW_MSG_SEARCH               DROP;
 ### or metalog.
 SYSLOG_DAEMON               syslogd;
 
+### What type of interface configuration do you use?  This this variable to
+### "iproute2" if you want to use the iproute2 type configuration.
+### iproute2 does not use aliases for multi-homed interfaces and
+### ifconfig does not show secondary addresses for multi-homed interfaces.
+#IFCFGTYPE  iproute2;
+IFCFGTYPE                   ifconfig;
+
 ### Danger levels.  These represent the total number of
 ### packets required for a scan to reach each danger level.
 ### A scan may also reach a danger level if the scan trips
@@ -516,6 +523,7 @@ psCmd            /bin/ps;
 mailCmd          /bin/mail;
 sendmailCmd      /usr/sbin/sendmail;
 ifconfigCmd      /sbin/ifconfig;
+ipCmd            /sbin/ip;
 killallCmd       /usr/bin/killall;
 netstatCmd       /bin/netstat;
 unameCmd         /bin/uname;
