@@ -1,3 +1,12 @@
+psad-2.1.7 (07/11/2010):
+    - (Dan A. Dickey) Added the ability to use the "ip" command from the
+      iproute2 tools to acquire IP addresses from local interfaces.  Dan's
+      description is as follows: "...A main reason for doing this is in the
+      case of multi-homed hosts. ifconfig sets these up on an interface using
+      aliases, iproute2 does not.  So, for a multi-homed interface (eth0 with
+      multiple addresses), ifconfig -a only shows the first one configured and
+      not the rest.  ip addr shows all of the configured addresses...".
+
 psad-2.1.6 (07/09/2010):
     - Bug fix for Decode_Month() calls used to handle date formats and ensure
       proper month handling for iptables log message time stamps.  This bug
